@@ -1,6 +1,6 @@
 /*
  * OpenRemote, the Home of the Digital Home.
- * Copyright 2008-2011, OpenRemote Inc.
+ * Copyright 2008-2014, OpenRemote Inc.
  *
  * See the contributors.txt file in the distribution for a
  * full listing of individual contributors.
@@ -252,7 +252,7 @@ public class DeployerTest
     Map<String, ModelBuilder> modelBuilders = new HashMap<String, ModelBuilder>();
     modelBuilders.put(ModelBuilder.SchemaVersion.VERSION_2_0.toString(), builder);
 
-    return new Deployer(deployerName, cache, config, null, modelBuilders);
+    return new Deployer(deployerName, cache, config, modelBuilders);
   }
 
 
@@ -295,7 +295,7 @@ public class DeployerTest
         )
     );
 
-    new Deployer(deployerName, cache, config, null, map);
+    new Deployer(deployerName, cache, config, map);
   }
 
   /**
@@ -307,7 +307,7 @@ public class DeployerTest
   {
     try
     {
-      new Deployer(null, null, null, null, null);
+      new Deployer(null, null, null, null);
 
       Assert.fail("should not get here...");
     }
@@ -327,7 +327,7 @@ public class DeployerTest
   {
     try
     {
-      new Deployer(null, new StatusCache(), null, null, null);
+      new Deployer(null, new StatusCache(), null, null);
 
       Assert.fail("should not get here...");
     }
@@ -347,7 +347,7 @@ public class DeployerTest
   {
     try
     {
-      new Deployer(null, null, new ControllerConfiguration(), null, null);
+      new Deployer(null, null, new ControllerConfiguration(), null);
 
       Assert.fail("should not get here...");
     }
@@ -365,7 +365,7 @@ public class DeployerTest
    */
   public void constructionNullArgs4() throws Exception
   {
-      new Deployer(null, new StatusCache(), new ControllerConfiguration(), null, null);
+      new Deployer(null, new StatusCache(), new ControllerConfiguration(), null);
   }
 
 
